static/scss/_clusters.scss
// Single Cluster

.cluster-single-people {
  background-color: #f9f9f9;
  font-family: $font-family-sans-serif;
  padding-bottom: 20px;
  padding-top: 50px;

  @media (max-width: $screen-xs-max) {
    padding-top: 20px;
  }
}

.cluster-single-people-heading {
  color: #7c7c7c;
  font-size: 16px;
  font-style: italic;
  font-weight: bold;
  margin: 0 0 20px;
  text-transform: none;

  @media (max-width: $screen-xs-max) {
    margin-bottom: 8px;
  }
}

.cluster-single-people-list {
  @include list-unstyled();
  font-size: 16px;
  font-weight: bold;
  line-height: 1.3;
  margin-bottom: 20px;
}

.cluster-single-leads {
  > li {
    display: inline-block;
  }
}

.cluster-single-contact-info {
  @include list-unstyled();
  margin-top: 8px;

  a {
    color: #000;
    font-size: .9em;
    font-weight: 300;
  }
}

.cluster-single-contacts {
  margin-bottom: 0;

  > li {
    display: inline-block;
    margin: 0 30px 20px 0;
    max-width: 30%;
    vertical-align: top;

    @media (min-width: $screen-lg-min) {
      max-width: 20%;
    }

    @media (max-width: $screen-sm-max) {
      max-width: 40%;
    }

    @media (max-width: $screen-xs-max) {
      margin: 0 0 15px;
      max-width: 100%;
      width: 100%;
    }
  }
}


// Basic Faculty Cluster lists (generated from [cluster-list])

.cluster-list {
  @include list-unstyled();
  font-family: $font-family-sans-serif;
  font-size: 16px;

  li {
    line-height: 1.1;
    margin-bottom: 12px;
  }
}


// Faculty Cluster Parallax Lists ("pl")

.cluster-pl-title {
  @include background-2x('../img/gold-dots-horizontal.png', '../img/gold-dots-horizontal@2x.png', center center, repeat-x, 12px, 5px);
  display: block;
  font-size: 34px;
  margin-bottom: 50px;
  margin-top: 30px;
  text-transform: none;

  @media (min-width: $screen-lg-min) {
    font-size: 36px;
  }

  @media (max-width: $screen-sm-max) {
    background-position: center bottom;
    font-size: 32px;
    margin-bottom: 40px;
  }

  a {
    background-color: #fff;
    color: #000;
    display: inline-block;
    margin: 0 20px 0 0; // Force at least 20px of visible dotted line (in case title is multiline)
    padding: 0 20px 0 0;

    @media (max-width: $screen-sm-max) {
      background-color: transparent;
      margin: 0;
      padding: 0 0 15px;
    }
  }
}

.cluster-pl-cta {
  margin-bottom: 40px;
  margin-top: -40px;
  position: relative;
  z-index: 4;

  @media (max-width: $screen-xs-max) {
    margin-top: 0;
  }
}

.cluster-pl-sidebar-title,
.cluster-pl-sidebar-list {
  font-family: $font-family-sans-serif;
}

.cluster-pl-sidebar-title {
  color: #787878;
  font-size: 18px;
  font-style: italic;
  font-weight: 600;
}

.cluster-pl-sidebar-list {
  @include list-unstyled;
  font-weight: 600;
  margin-bottom: 40px;

  li {
    margin-bottom: 10px;
  }
}

.cluster-pl-contact-info {
  @include list-unstyled;
  font-size: .9em;
  font-weight: 300;
  margin-top: 2px;

  li {
    margin-bottom: 0;
  }

  a {
    &,
    &:hover,
    &:focus {
      color: #000;
    }
  }
}

.cluster-pl-desc,
.cluster-pl-sidebar-list:last-child {
  margin-bottom: 70px;

  @media (max-width: $screen-xs-max) {
    margin-bottom: 30px;
  }
}


// Basic Faculty Cluster list

.cluster-short h3 {
  font-size: 25px;
  line-height: 1.1;
  margin: 15px 0 10px;

  a {
    color: #000;
    font-family: $font-family-sans-serif;
    font-weight: 600;
  }
}

.cluster-short-inner {
  margin-top: 20px;
}

.cluster-short-desc,
.cluster-short-inline-list {
  font-family: $font-family-sans-serif-alt;
  font-size: 13px;
}

.cluster-short-desc {
  font-weight: 400;
  line-height: 1.4;
  padding-bottom: 20px;
}

.cluster-short-inline-list {
  line-height: 1.2;
  padding: 10px 0 20px;

  dt,
  dd {
    display: inline;
  }

  dt {
    font-weight: 600;
  }
}

.cluster-short-buttons-container {
  @include background-2x('../img/gold-dots-horizontal.png', '../img/gold-dots-horizontal@2x.png', '', repeat-x, 12px, 5px);
  display: block;
  margin-bottom: 25px;
  padding-top: 20px;
  white-space: nowrap;

  @media (max-width: $screen-sm-max) {
    white-space: normal;
  }
}

.cluster-short-btn {
  border: 0;
  display: inline-block;
  font-family: $font-family-sans-serif;
  font-size: 14px;
  margin: 0 0 0 10px;
  padding: 10px 14px;
  text-align: left;
  text-transform: capitalize;
  white-space: normal;

  @media (max-width: $screen-sm-max) {
    display: block;
    margin: 0 0 15px;
    text-align: center;
  }

  &:first-child {
    margin-left: 0;
  }
}

